[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graphchan-orb"
version = "0.1.0"
description = "OrbWeaver / Graphchan forum plugin for Ponderer"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphchan_orb*"]
